--- a/index.html
+++ b/index.html
@@ -9,14 +9,40 @@
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <h1>Pizza Size Simulator</h1>
-        </header>
+            <header class="header">
+        <div class="header-icon">
+            <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+                <circle cx="30" cy="30" r="25" fill="#bc6c25" stroke="#8b4513" stroke-width="2"/>
+                <circle cx="30" cy="30" r="20" fill="#d4a574"/>
+                <circle cx="30" cy="30" r="15" fill="#f8f4e6"/>
+                <circle cx="30" cy="30" r="10" fill="#bc6c25"/>
+                <circle cx="30" cy="30" r="5" fill="#8b4513"/>
+                <!-- Tranches -->
+                <path d="M30 5 L30 55 M5 30 L55 30 M15 15 L45 45 M15 45 L45 15" stroke="#8b4513" stroke-width="1" opacity="0.6"/>
+                <!-- Garnitures -->
+                <circle cx="20" cy="20" r="2" fill="#8b4513"/>
+                <circle cx="40" cy="40" r="2" fill="#8b4513"/>
+                <circle cx="20" cy="40" r="2" fill="#8b4513"/>
+                <circle cx="40" cy="20" r="2" fill="#8b4513"/>
+            </svg>
+        </div>
+        <h1>Pizza Size Simulator</h1>
+    </header>
 
         <main class="main-content">
             <!-- Slider Section -->
             <section class="slider-section">
                 <div class="slider-container">
+                    <div class="slider-icon">
+                        <svg width="30" height="30" viewBox="0 0 30 30" fill="none">
+                            <circle cx="15" cy="15" r="12" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
+                            <circle cx="15" cy="15" r="8" fill="#d4a574"/>
+                            <circle cx="15" cy="15" r="4" fill="#f8f4e6"/>
+                            <path d="M15 3 L15 27 M3 15 L27 15" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
+                            <circle cx="12" cy="12" r="1" fill="#8b4513"/>
+                            <circle cx="18" cy="18" r="1" fill="#8b4513"/>
+                        </svg>
+                    </div>
                     <input type="range" id="diameter-slider" min="5" max="100" value="26" class="slider">
                     <div class="slider-value">
                         <span id="diameter-value">26</span> cm
@@ -30,9 +56,42 @@
 
             <!-- Fixed Size Buttons -->
             <section class="fixed-sizes">
-                <button class="size-btn" data-size="26">26 cm</button>
-                <button class="size-btn" data-size="29">29 cm</button>
-                <button class="size-btn" data-size="33">33 cm</button>
+                <button class="size-btn" data-size="26">
+                    <div class="btn-icon">
+                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none">
+                            <circle cx="12.5" cy="12.5" r="10" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
+                            <circle cx="12.5" cy="12.5" r="6" fill="#d4a574"/>
+                            <path d="M12.5 2.5 L12.5 22.5 M2.5 12.5 L22.5 12.5" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
+                            <circle cx="10" cy="10" r="0.8" fill="#8b4513"/>
+                            <circle cx="15" cy="15" r="0.8" fill="#8b4513"/>
+                        </svg>
+                    </div>
+                    26 cm
+                </button>
+                <button class="size-btn" data-size="29">
+                    <div class="btn-icon">
+                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none">
+                            <circle cx="12.5" cy="12.5" r="10" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
+                            <circle cx="12.5" cy="12.5" r="6" fill="#d4a574"/>
+                            <path d="M12.5 2.5 L12.5 22.5 M2.5 12.5 L22.5 12.5" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
+                            <circle cx="10" cy="10" r="0.8" fill="#8b4513"/>
+                            <circle cx="15" cy="15" r="0.8" fill="#8b4513"/>
+                        </svg>
+                    </div>
+                    29 cm
+                </button>
+                <button class="size-btn" data-size="33">
+                    <div class="btn-icon">
+                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none">
+                            <circle cx="12.5" cy="12.5" r="10" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
+                            <circle cx="12.5" cy="12.5" r="6" fill="#d4a574"/>
+                            <path d="M12.5 2.5 L12.5 22.5 M2.5 12.5 L22.5 12.5" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
+                            <circle cx="10" cy="10" r="0.8" fill="#8b4513"/>
+                            <circle cx="15" cy="15" r="0.8" fill="#8b4513"/>
+                        </svg>
+                    </div>
+                    33 cm
+                </button>
             </section>
 
             <!-- Input Fields -->
@@ -40,12 +99,8 @@
                 <div class="input-group">
                     <label for="price-input">Mentionner un prix:</label>
                     <div class="input-with-unit">
-                        <input type="number" id="price-input" value="8.5" step="0.01" min="0" class="input-field">
+                        <input type="number" id="price-input" value="8.5" step="0.05" min="0" class="input-field">
                         <span class="unit">€</span>
-                        <div class="number-controls">
-                            <button type="button" class="control-btn" id="increase-price-btn">+</button>
-                            <button type="button" class="control-btn" id="decrease-price-btn">-</button>
-                        </div>
                     </div>
                 </div>
                 <div class="input-group">
@@ -53,10 +108,6 @@
                     <div class="input-with-unit">
                         <input type="number" id="people-count-input" value="1" step="1" min="1" max="10" class="input-field">
                         <span class="unit">personnes</span>
-                        <div class="number-controls">
-                            <button type="button" class="control-btn" id="increase-btn">+</button>
-                            <button type="button" class="control-btn" id="decrease-btn">-</button>
-                        </div>
                     </div>
                 </div>
             </section>
@@ -65,15 +116,42 @@
             <section class="info-section">
                 <div class="info-card">
                     <div class="info-item">
-                        <span class="info-label">- Surface de pizza (cm2)</span>
+                        <div class="info-label-container">
+                            <div class="info-icon">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                    <circle cx="10" cy="10" r="8" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
+                                    <circle cx="10" cy="10" r="5" fill="#d4a574"/>
+                                    <path d="M10 2 L10 18 M2 10 L18 10" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
+                                </svg>
+                            </div>
+                            <span class="info-label">Surface de pizza (cm2)</span>
+                        </div>
                         <span class="info-value" id="pizza-area">531 cm2</span>
                     </div>
                     <div class="info-item">
-                        <span class="info-label">- Prix/cm2</span>
+                        <div class="info-label-container">
+                            <div class="info-icon">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                    <circle cx="10" cy="10" r="8" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
+                                    <circle cx="10" cy="10" r="5" fill="#d4a574"/>
+                                    <path d="M10 2 L10 18 M2 10 L18 10" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
+                                </svg>
+                            </div>
+                            <span class="info-label">Prix/cm2</span>
+                        </div>
                         <span class="info-value" id="price-per-cm2">0.016 €/cm2</span>
                     </div>
                     <div class="info-item">
-                        <span class="info-label">- Surface par personne</span>
+                        <div class="info-label-container">
+                            <div class="info-icon">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                                    <circle cx="10" cy="10" r="8" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
+                                    <circle cx="10" cy="10" r="5" fill="#d4a574"/>
+                                    <path d="M10 2 L10 18 M2 10 L18 10" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
+                                </svg>
+                            </div>
+                            <span class="info-label">Surface par personne</span>
+                        </div>
                         <span class="info-value" id="area-per-person-display">531 cm2</span>
                     </div>
                 </div>
