--- a/index.html
+++ b/index.html
@@ -10,23 +10,7 @@
 <body>
     <div class="container">
             <header class="header">
-        <div class="header-icon">
-            <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
-                <circle cx="30" cy="30" r="25" fill="#bc6c25" stroke="#8b4513" stroke-width="2"/>
-                <circle cx="30" cy="30" r="20" fill="#d4a574"/>
-                <circle cx="30" cy="30" r="15" fill="#f8f4e6"/>
-                <circle cx="30" cy="30" r="10" fill="#bc6c25"/>
-                <circle cx="30" cy="30" r="5" fill="#8b4513"/>
-                <!-- Tranches -->
-                <path d="M30 5 L30 55 M5 30 L55 30 M15 15 L45 45 M15 45 L45 15" stroke="#8b4513" stroke-width="1" opacity="0.6"/>
-                <!-- Garnitures -->
-                <circle cx="20" cy="20" r="2" fill="#8b4513"/>
-                <circle cx="40" cy="40" r="2" fill="#8b4513"/>
-                <circle cx="20" cy="40" r="2" fill="#8b4513"/>
-                <circle cx="40" cy="20" r="2" fill="#8b4513"/>
-            </svg>
-        </div>
-        <h1>Pizza Size Simulator</h1>
+        <img src="assets/pizza_logo.png" alt="Pizza Size Simulator" class="pizza-logo">
     </header>
 
         <main class="main-content">
@@ -34,14 +18,7 @@
             <section class="slider-section">
                 <div class="slider-container">
                     <div class="slider-icon">
-                        <svg width="30" height="30" viewBox="0 0 30 30" fill="none">
-                            <circle cx="15" cy="15" r="12" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
-                            <circle cx="15" cy="15" r="8" fill="#d4a574"/>
-                            <circle cx="15" cy="15" r="4" fill="#f8f4e6"/>
-                            <path d="M15 3 L15 27 M3 15 L27 15" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
-                            <circle cx="12" cy="12" r="1" fill="#8b4513"/>
-                            <circle cx="18" cy="18" r="1" fill="#8b4513"/>
-                        </svg>
+                        <img src="assets/pizza_size.png" alt="Pizza Icon" width="30" height="30">
                     </div>
                     <input type="range" id="diameter-slider" min="5" max="100" value="26" class="slider">
                     <div class="slider-value">
@@ -58,37 +35,19 @@
             <section class="fixed-sizes">
                 <button class="size-btn" data-size="26">
                     <div class="btn-icon">
-                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none">
-                            <circle cx="12.5" cy="12.5" r="10" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
-                            <circle cx="12.5" cy="12.5" r="6" fill="#d4a574"/>
-                            <path d="M12.5 2.5 L12.5 22.5 M2.5 12.5 L22.5 12.5" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
-                            <circle cx="10" cy="10" r="0.8" fill="#8b4513"/>
-                            <circle cx="15" cy="15" r="0.8" fill="#8b4513"/>
-                        </svg>
+                        <img src="assets/pizza_size.png" alt="Pizza Icon" width="25" height="25">
                     </div>
                     26 cm
                 </button>
                 <button class="size-btn" data-size="29">
                     <div class="btn-icon">
-                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none">
-                            <circle cx="12.5" cy="12.5" r="10" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
-                            <circle cx="12.5" cy="12.5" r="6" fill="#d4a574"/>
-                            <path d="M12.5 2.5 L12.5 22.5 M2.5 12.5 L22.5 12.5" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
-                            <circle cx="10" cy="10" r="0.8" fill="#8b4513"/>
-                            <circle cx="15" cy="15" r="0.8" fill="#8b4513"/>
-                        </svg>
+                        <img src="assets/pizza_size.png" alt="Pizza Icon" width="25" height="25">
                     </div>
                     29 cm
                 </button>
                 <button class="size-btn" data-size="33">
                     <div class="btn-icon">
-                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none">
-                            <circle cx="12.5" cy="12.5" r="10" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
-                            <circle cx="12.5" cy="12.5" r="6" fill="#d4a574"/>
-                            <path d="M12.5 2.5 L12.5 22.5 M2.5 12.5 L22.5 12.5" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
-                            <circle cx="10" cy="10" r="0.8" fill="#8b4513"/>
-                            <circle cx="15" cy="15" r="0.8" fill="#8b4513"/>
-                        </svg>
+                        <img src="assets/pizza_size.png" alt="Pizza Icon" width="25" height="25">
                     </div>
                     33 cm
                 </button>
@@ -118,11 +77,7 @@
                     <div class="info-item">
                         <div class="info-label-container">
                             <div class="info-icon">
-                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                                    <circle cx="10" cy="10" r="8" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
-                                    <circle cx="10" cy="10" r="5" fill="#d4a574"/>
-                                    <path d="M10 2 L10 18 M2 10 L18 10" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
-                                </svg>
+                                <img src="assets/pizza_size.png" alt="Pizza Icon" width="20" height="20">
                             </div>
                             <span class="info-label">Surface de pizza (cm2)</span>
                         </div>
@@ -131,11 +86,7 @@
                     <div class="info-item">
                         <div class="info-label-container">
                             <div class="info-icon">
-                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                                    <circle cx="10" cy="10" r="8" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
-                                    <circle cx="10" cy="10" r="5" fill="#d4a574"/>
-                                    <path d="M10 2 L10 18 M2 10 L18 10" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
-                                </svg>
+                                <img src="assets/pizza_size.png" alt="Pizza Icon" width="20" height="20">
                             </div>
                             <span class="info-label">Prix/cm2</span>
                         </div>
@@ -144,11 +95,7 @@
                     <div class="info-item">
                         <div class="info-label-container">
                             <div class="info-icon">
-                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                                    <circle cx="10" cy="10" r="8" fill="#bc6c25" stroke="#8b4513" stroke-width="1"/>
-                                    <circle cx="10" cy="10" r="5" fill="#d4a574"/>
-                                    <path d="M10 2 L10 18 M2 10 L18 10" stroke="#8b4513" stroke-width="0.5" opacity="0.6"/>
-                                </svg>
+                                <img src="assets/pizza_size.png" alt="Pizza Icon" width="20" height="20">
                             </div>
                             <span class="info-label">Surface par personne</span>
                         </div>
